<?xml version="1.0"?>
<package format="2">
  <name>fuse_loss</name>
  <version>0.4.2</version>
  <description>
    The fuse_loss package provides a set of commonly used loss functions, such as the basic ones provided by Ceres.
  </description>

  <maintainer email="swilliams@locusrobotics.com">Stephen Williams</maintainer>
  <author email="efernandez@clearpath.ai">Enrique Fernandez</author>
  <author email="swilliams@locusrobotics.com">Stephen Williams</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>libceres-dev</depend>
  <depend>fuse_core</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>

  <test_depend>qtbase5-dev</test_depend>
  <test_depend>libqwt-qt5-dev</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <fuse_core plugin="${prefix}/fuse_plugins.xml" />
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
