<?xml version="1.0"?>
<package format="2">
  <name>fuse_models</name>
  <version>0.2.0</version>
  <description>fuse plugins that implement various kinematic and sensor models</description>

  <author email="tmoore@locusrobotics.com">Tom Moore</author>
  <maintainer email="tmoore@locusrobotics.com">Tom Moore</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <depend>boost</depend>
  <depend>libceres-dev</depend>
  <depend>eigen</depend>
  <depend>fuse_constraints</depend>
  <depend>fuse_core</depend>
  <depend>fuse_graphs</depend>
  <depend>fuse_publishers</depend>
  <depend>fuse_variables</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_2d</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roslint</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <!-- The official rosdep doesn't have an entry for Google's benchmark deb:
       https://github.com/ros/rosdistro/blob/master/rosdep/base.yaml

       There's an official deb named libbenchmark-dev available since Ubuntu Bionic:
       https://packages.ubuntu.com/bionic/libbenchmark-dev

       ROS Melodic officially supports Ubuntu Bionic:
       https://www.ros.org/reps/rep-0003.html

       This could be uncommented if we add a benchmark entry like this to the official rosdep:

       benchmark:
         ubuntu:
           bionic: [libbenchmark-dev]

       There is PR requesting that still under review:
       https://github.com/ros/rosdistro/pull/23163
  -->
  <!--<test_depend>benchmark</test_depend>-->
  <test_depend>rostest</test_depend>

  <export>
    <fuse_core plugin="${prefix}/fuse_plugins.xml" />
  </export>
</package>
