<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fuse_models</name>
  <version>0.4.1</version>
  <description>fuse plugins that implement various kinematic and sensor models</description>

  <author email="tmoore@locusrobotics.com">Tom Moore</author>
  <maintainer email="tmoore@locusrobotics.com">Tom Moore</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>boost</depend>
  <depend>libceres-dev</depend>
  <depend>eigen</depend>
  <depend>fuse_constraints</depend>
  <depend>fuse_core</depend>
  <depend>fuse_graphs</depend>
  <depend>fuse_msgs</depend>
  <depend>fuse_publishers</depend>
  <depend>fuse_variables</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_2d</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roslint</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <!-- The official rosdep has an entry for Google's benchmark deb
       (https://github.com/ros/rosdistro/blob/2cbcebdedcc1e827501acfecaf2386cd33f26809/rosdep/base.yaml#L232-L239)
       since https://github.com/ros/rosdistro/pull/23163 got merged.

       There's an official deb named libbenchmark-dev available since Ubuntu Bionic:
       https://packages.ubuntu.com/bionic/libbenchmark-dev

       And ROS Melodic is the first $ROS_DISTRO that officially supports Ubuntu Bionic:
       https://www.ros.org/reps/rep-0003.html

       For this reason we conditionally test_depend on benchmark only if the $ROS_DISTRO is ROS Melodic or newer.
  -->
  <test_depend condition="$ROS_DISTRO >= melodic">benchmark</test_depend>
  <test_depend>rostest</test_depend>

  <export>
    <fuse_core plugin="${prefix}/fuse_plugins.xml" />
  </export>
</package>
