<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fuse_models</name>
  <version>1.0.1</version>
  <description>fuse plugins that implement various kinematic and sensor models</description>

  <maintainer email="tmoore@locusrobotics.com">Tom Moore</maintainer>
  <license>BSD</license>
  <author email="tmoore@locusrobotics.com">Tom Moore</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>boost</depend>
  <depend>libceres-dev</depend>
  <depend>eigen</depend>

  <build_depend>fuse_constraints</build_depend>
  <build_depend>fuse_core</build_depend>
  <build_depend>fuse_graphs</build_depend>
  <build_depend>fuse_msgs</build_depend>
  <build_depend>fuse_publishers</build_depend>
  <build_depend>fuse_variables</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_2d</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>

  <exec_depend>fuse_constraints</exec_depend>
  <exec_depend>fuse_core</exec_depend>
  <exec_depend>fuse_graphs</exec_depend>
  <exec_depend>fuse_msgs</exec_depend>
  <exec_depend>fuse_publishers</exec_depend>
  <exec_depend>fuse_variables</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_2d</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <test_depend>benchmark</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <fuse_core plugin="${prefix}/fuse_plugins.xml" />
  </export>
</package>
