<?xml version="1.0"?>
<package format="3">
  <name>fuse_msgs</name>
  <version>0.4.2</version>
  <description>
    The fuse_msgs package contains messages capable of holding serialized fuse objects
  </description>

  <maintainer email="swilliams@locusrobotics.com">Stephen Williams</maintainer>
  <author email="swilliams@locusrobotics.com">Stephen Williams</author>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>


  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
